WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111920
DFG prediction propagation phase should not rerun forward propagation if double voting has already converged
https://bugs.webkit.org/show_bug.cgi?id=111920
Summary
DFG prediction propagation phase should not rerun forward propagation if doub...
Filip Pizlo
Reported
2013-03-09 00:39:24 PST
Patch forthcoming.
Attachments
the patch
(1.83 KB, patch)
2013-03-09 00:41 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-03-09 00:41:52 PST
Created
attachment 192338
[details]
the patch
WebKit Review Bot
Comment 2
2013-03-12 00:05:04 PDT
Comment on
attachment 192338
[details]
the patch Clearing flags on attachment: 192338 Committed
r145491
: <
http://trac.webkit.org/changeset/145491
>
WebKit Review Bot
Comment 3
2013-03-12 00:05:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug