DFG prediction propagation phase should not rerun forward propagation if double voting has already converged https://bugs.webkit.org/show_bug.cgi?id=111920

Reviewed by Oliver Hunt.

I don't know why we weren't exiting early after double voting if !m_changed.

This change also removes backwards propagation from the voting fixpoint, since at that
point short-circuiting loops is probably not particularly profitable. Profiling shows
that this reduces the time spent in prediction propagation even further.

This change appears to be a 1% SunSpider speed-up.

* dfg/DFGPredictionPropagationPhase.cpp:
(JSC::DFG::PredictionPropagationPhase::run):


Canonical link: https://commits.webkit.org/130425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145491 268f45cc-cd09-0410-ab3c-d52691b4dbfc